--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "firebase": "^9.9.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-service": "~5.0.0"
-  }
+  },
+  "browser":{
+"child_process": false
+}  
 }
